bug 1483963, cache the index of a child node when ordering animations for event dispatch, r=hiro,ehsan

--HG--
extra : rebase_source : f98586625b199e7b2d0eb7db8dc9c1c5235289fe